src/objects/Ter_Estacion_de_Servicio__c.object
<CustomObject>
    <description>Este objeto contiene los registros de las estaciones de servicio de Terpel asociadas a sus operadores.</description>
    <fields>
        <fullName>F_Acumula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acumula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_ClubTerpel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Habilitar para el programa de Fidelización &quot;Club Terpel&quot; (Fielo)</inlineHelpText>
        <label>Club Terpel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Fechaultimatransaccion__c</fullName>
        <label>Fecha última transacción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_IdFidelizacion__c</fullName>
        <externalId>true</externalId>
        <label>Id Fidelizacion</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F_Reclama__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Redime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Operador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Altoque__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio contiene el servicio al toque.</description>
        <label>Altoque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Ciudad__c</fullName>
        <description>Este campo contiene la ciudad de la estación de servicio.</description>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Codigo_sicom__c</fullName>
        <description>Este campo contiene el código sicom de la estación de servicio.</description>
        <label>Codigo sicom</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Codigo_unico__c</fullName>
        <description>Este campo contiene el código único de la estación de servicio.</description>
        <externalId>true</externalId>
        <label>Codigo unico</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ter_Departamento__c</fullName>
        <description>Este campo contiene el departamento geográfico al que la estación de servicio pertenece.</description>
        <label>Departamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Deuna__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio posee servicio de una.</description>
        <label>Deuna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Direccion__c</fullName>
        <description>Este campo indica la dirección de la estación de servicio.</description>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Dual__c</fullName>
        <description>Este campo indica si la estación de servicio contiene el servicio dual.</description>
        <label>Dual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Estatus__c</fullName>
        <description>Este campo contiene el estado de la estación de servicio.</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activa</fullName>
                </value>
                <value>
                    <fullName>Inactiva</fullName>
                </value>
                <value>
                    <fullName>inactiva (ambiental)</fullName>
                </value>
                <value>
                    <fullName>inactiva otro</fullName>
                </value>
                <value>
                    <fullName>inactiva (juridico)</fullName>
                </value>
                <value>
                    <fullName>inactiva cupo ley frontera</fullName>
                </value>
                <value>
                    <fullName>inactiva (prob. economicos)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (pend. renov)</fullName>
                </value>
                <value>
                    <fullName>inactiva (certificación)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (orden publico)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (Extinción de dominio)</fullName>
                </value>
                <value>
                    <fullName>inactiva (muerte prop)</fullName>
                </value>
                <value>
                    <fullName>inactiva (zona contrabando)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (juridico)</fullName>
                </value>
                <value>
                    <fullName>inactiva (voluntad prop.)</fullName>
                </value>
                <value>
                    <fullName>inactiva (contraccion mercado)</fullName>
                </value>
                <value>
                    <fullName>inactiva (embargo banco-no se compro)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (prob. Economicos)</fullName>
                </value>
                <value>
                    <fullName>inactiva (orden publico)</fullName>
                </value>
                <value>
                    <fullName>inactiva (prob. vial)</fullName>
                </value>
                <value>
                    <fullName>inactiva sin contrato (certificación)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Imagen__c</fullName>
        <description>Este campo contiene la imagen de la estación de servicio.</description>
        <label>Imagen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Icónica</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>Antigua</fullName>
                </value>
                <value>
                    <fullName>Estándar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Isla_de_motos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio posee el servicio de isla de motos.</description>
        <label>Isla de motos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Latitud__c</fullName>
        <description>Este campo posee la latitud de la estación de servicio.</description>
        <label>Latitud</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Longitud__c</fullName>
        <description>Este campo contiene la longitud geográfica de la estación de servicio.</description>
        <label>Longitud</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Marca__c</fullName>
        <description>Este campo contiene la marca de la estación de servicio.</description>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terpel</fullName>
                </value>
                <value>
                    <fullName>Esso</fullName>
                </value>
                <value>
                    <fullName>Mobil</fullName>
                </value>
                <value>
                    <fullName>Texaco</fullName>
                </value>
                <value>
                    <fullName>Petrobrás</fullName>
                </value>
                <value>
                    <fullName>Petromil</fullName>
                </value>
                <value>
                    <fullName>Brio</fullName>
                </value>
                <value>
                    <fullName>Biomax</fullName>
                </value>
                <value>
                    <fullName>Puma</fullName>
                </value>
                <value>
                    <fullName>Zeuss</fullName>
                </value>
                <value>
                    <fullName>Otra</fullName>
                </value>
                <value>
                    <fullName>Gazel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Nombre_jefe_de_zona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Este campo contiene el jefe de zona de la estación de servicio.</description>
        <label>Nombre jefe de zona</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estaciones_de_Servicio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Propia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio es propia.</description>
        <label>Propia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Regional__c</fullName>
        <description>Este campo contiene la regional de la estación de servicio.</description>
        <label>Regional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Occidente</fullName>
                </value>
                <value>
                    <fullName>Sabana</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Reporte_1__c</fullName>
        <description>Este campo contiene la url para el informe 1 de la estación de servicio.</description>
        <label>Reporte 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ter_Reporte_2__c</fullName>
        <description>Este campo contiene el reporte 2 de la estación de servicio.</description>
        <label>Reporte 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ter_Reporte_3__c</fullName>
        <description>Este campo contiene la url del reporte 3 de la estación de servicio.</description>
        <label>Reporte 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ter_Rumbo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio contiene el servicio rumbo.</description>
        <label>Rumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Segmento__c</fullName>
        <description>Este campo contiene el segmento de la estación de servicio.</description>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDS TERCEROS</fullName>
                </value>
                <value>
                    <fullName>EDS OPESE</fullName>
                </value>
                <value>
                    <fullName>EDS FRANQUICIADAS</fullName>
                </value>
                <value>
                    <fullName>EDS PROPIAS (POD)</fullName>
                </value>
                <value>
                    <fullName>EDS PROPIAS (POT)</fullName>
                </value>
                <value>
                    <fullName>COMPETENCIA</fullName>
                </value>
                <value>
                    <fullName>COINVERSIÓN</fullName>
                </value>
                <value>
                    <fullName>CORPORATIVA</fullName>
                </value>
                <value>
                    <fullName>FRANQUICIADA</fullName>
                </value>
                <value>
                    <fullName>PROPIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Ultimos_pedidos__c</fullName>
        <description>Este campo contiene la url para visualizar los pedidos de la estación de servicio.</description>
        <label>Ultimos pedidos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ter_Ziclos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo indica si la estación de servicio contiene el servicio ziclos.</description>
        <label>Ziclos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Zona__c</fullName>
        <description>Este campo contiene el número de la estación de servicio.</description>
        <label>Zona</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Estación de Servicio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ter_Zona__c</columns>
        <columns>Ter_Codigo_unico__c</columns>
        <columns>NAME</columns>
        <columns>Ter_Ciudad__c</columns>
        <columns>Ter_Departamento__c</columns>
        <columns>Ter_Regional__c</columns>
        <columns>Ter_Segmento__c</columns>
        <columns>F_IdFidelizacion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Carlos_Sarasti_Zona_501</fullName>
        <columns>Ter_Codigo_unico__c</columns>
        <columns>NAME</columns>
        <columns>Ter_Segmento__c</columns>
        <columns>Ter_Departamento__c</columns>
        <columns>Ter_Ciudad__c</columns>
        <columns>Ter_Zona__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ter_Marca__c</field>
            <operation>equals</operation>
            <value>Terpel</value>
        </filters>
        <filters>
            <field>Ter_Zona__c</field>
            <operation>equals</operation>
            <value>501</value>
        </filters>
        <label>Carlos Sarasti - Zona 501</label>
        <sharedTo>
            <role>Administrador_Funcional</role>
            <role>Jefe_de_Zona_501</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ter_Mis_Estaciones_de_Servicio</fullName>
        <columns>Ter_Zona__c</columns>
        <columns>Ter_Codigo_unico__c</columns>
        <columns>NAME</columns>
        <columns>Ter_Ciudad__c</columns>
        <columns>Ter_Departamento__c</columns>
        <columns>Ter_Regional__c</columns>
        <columns>Ter_Segmento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ter_Marca__c</field>
            <operation>equals</operation>
            <value>Terpel</value>
        </filters>
        <label>Mis Estaciones de Servicio</label>
    </listViews>
    <nameField>
        <label>Nombre EDS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estaciones de Servicio</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fielo_EDS_IdFidelizacionRequerido</fullName>
        <active>true</active>
        <errorConditionFormula>F_ClubTerpel__c &amp;&amp; ISBLANK(F_IdFidelizacion__c)</errorConditionFormula>
        <errorDisplayField>F_IdFidelizacion__c</errorDisplayField>
        <errorMessage>Para poder habilitar el punto de venta en Club Terpel el campo Id Fidelización es Requerido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fielo_EDS_RestringirActualizacionName</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 $Profile.Name = &apos;Fielo Backend User&apos;
,ISCHANGED(Name) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Tu perfil no permite la edición del campo Nombre</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TER_EDS_001_Valida_propietario</fullName>
        <active>true</active>
        <description>Esta regla valida que el campo propietario no se modifique por algunos perfiles.</description>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Plataforma&quot;,
$Profile.Name &lt;&gt; &quot;Administrador Técnico Plataforma&quot;,
$Profile.Name &lt;&gt; &quot;Administrador Funcional Comercial&quot;,
$Profile.Name &lt;&gt; &quot;Cartera&quot;
)</errorConditionFormula>
        <errorMessage>TER-EDS-001: Su perfil no permite modificar el propietario.</errorMessage>
    </validationRules>
</CustomObject>